<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?actionBarTheme"
        app:popupTheme="?popupTheme"
        app:title="@string/Controller" />


    <ProgressBar
        android:id="@+id/connection_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/scrollView"
        android:layout_marginTop="-10dp"
        android:indeterminate="false"
        android:visibility="invisible"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/main_controllers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/fab_margin"
                android:clipToPadding="false"
                android:padding="4dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/Gamepad_Card"
                    android:layout_width="@dimen/card_width"
                    android:layout_height="@dimen/card_height"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_gamepad_clipart"
                        app:tint="@color/cyanea_accent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_margin="@dimen/fab_margin"
                        android:text="@string/gamePad"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/Phone_Card"
                    android:layout_width="@dimen/card_width"
                    android:layout_height="@dimen/card_height"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="96dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="11dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_smartphone_black_24dp"
                        app:tint="@color/cyanea_accent" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="38dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_controller"
                        app:tint="@color/cyanea_accent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_margin="@dimen/fab_margin"
                        android:text="@string/phonePad"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/terminal_card"
                android:layout_width="@dimen/card_width"
                android:layout_height="@dimen/card_height"
                android:layout_below="@id/main_controllers"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/fab_margin"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_code_icon"
                    app:tint="@color/cyanea_accent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="@string/terminal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>

    <!--Drop shadow for toolbar over cardViews-->
    <View
        android:id="@+id/dropShadow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/toolbar"
        android:background="@drawable/shadow_reverse" />
</RelativeLayout>